// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<button
  className="button--primary "
  disabled={false}
  onClick={[MockFunction]}
/>
`;

exports[`Button should render disabled 1`] = `
<button
  className="button--primary "
  disabled={true}
  onClick={[MockFunction]}
/>
`;
